<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_diary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="sysu.liekkasnote.AddDiary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:textAlignment="center"
          android:text="@string/newDiary"
          android:textColor="@color/deepBlue"
          android:textSize="20dp"/>

         <TextView
        android:textSize="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diary_title"/>
    <EditText
        android:paddingLeft="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textview_border"
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"/>
        <TextView
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_content"/>
    <EditText
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textview_border"
        android:id="@+id/diary_edit"
        android:gravity="top"
        android:layout_below="@+id/title_edit"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:layout_marginBottom="30dp"
        android:textSize="15dp" />

    <Button
        android:background="@color/buttonColor"
        android:id="@+id/submit"
        android:text="提交日记"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"/>
    </LinearLayout>
</RelativeLayout>
