<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sysu.liekkasnote.LoginActivity">

    <LinearLayout
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="24dp"
            android:layout_marginBottom="20dp" />
        <LinearLayout

            android:id="@+id/login_message_username"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">

            <ImageView
                android:background="@drawable/textview_border"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/account"
                android:layout_marginRight="-1dp"/>


            <EditText
                android:paddingLeft="5dp"
                android:inputType="text"
                android:background="@drawable/textview_border"
                android:id="@+id/usernameEdit"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="35dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:id="@+id/login_message_password"
            android:layout_below="@+id/login_message_username"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">


            <ImageView
                android:background="@drawable/textview_border"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/lock"
                android:layout_marginRight="-1dp"/>
            <EditText
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:background="@drawable/textview_border"
                android:id="@+id/passwordEdit"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="35dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button

                android:background="@color/buttonColor"
                android:id="@+id/submit"
                android:text="@string/login"
                android:layout_below="@+id/login_message_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:textColor="#ffffff"
                android:textSize="@dimen/abc_text_size_medium_material" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textColor="@color/dim_foreground_disabled_material_light" />
                <TextView
                    android:id="@+id/zhuce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_hint"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_marginTop="-2dp"
                    android:id="@+id/register"
                    android:layout_marginLeft="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/arrow"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
