<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_diary_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sysu.liekkasnote.LoginActivity">

    <LinearLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/buttonColor">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/book"/>
            <TextView
                android:layout_marginLeft="20dp"
                android:text="@string/myDiary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/messageCenter"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/greyColor">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthDiaryNumber"
                    android:textSize="18dp"
                    android:textColor="@color/deepBlue"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/monthlyTotalNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11"
                    android:textColor="@color/deepBlue"
                    />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yearDiaryNumber"
                    android:textSize="18dp"
                    android:textColor="@color/deepBlue"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/yearlyTotalNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="31"
                    android:textColor="@color/deepBlue"
                    />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalDiaryNumber"
                    android:textSize="18dp"
                    android:textColor="@color/deepBlue"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/diaryTotalNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="111"
                    android:textColor="@color/deepBlue"
                    />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <ListView
        android:layout_marginTop="20dp"
        android:layout_below="@id/top_menu"
        android:id="@+id/diary_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/top_menu"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_width="50dp"
        android:layout_height="50dp" />

</RelativeLayout>
